--- a/app/src/main/res/layout/fragment_publish_dynamic.xml
+++ b/app/src/main/res/layout/fragment_publish_dynamic.xml
@@ -100,6 +100,7 @@
                         android:layout_centerVertical="true"
                         android:layout_alignParentEnd="true" />
                 </RelativeLayout>
+                <include layout="@layout/sync_choose_layout"/>
             </LinearLayout>
         </ScrollView>
     </FrameLayout>
