--- a/app/src/main/res/layout/alumni_question_item.xml
+++ b/app/src/main/res/layout/alumni_question_item.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@android:color/black"
+        android:paddingTop="@dimen/FIVE_DP"
         android:text="@string/asked_by"
         android:id="@+id/re_list_item_name"
         android:layout_below="@+id/question_gridview"
@@ -38,6 +39,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="@dimen/FIVE_DP"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/date_tv"
         android:layout_alignBottom="@+id/count_tv"
@@ -64,8 +66,9 @@
     <com.nju.View.SchoolFriendGridView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:numColumns="3"
+        android:horizontalSpacing="@dimen/FIVE_DP"
+        android:verticalSpacing="@dimen/FIVE_DP"
         android:id="@+id/question_gridview"
         android:layout_below="@+id/title_tv"
         android:layout_alignParentStart="true" />
