--- a/app/src/main/res/layout/fragment_circle_image_view_item.xml
+++ b/app/src/main/res/layout/fragment_circle_image_view_item.xml
@@ -1,11 +1,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context="com.nju.fragment.CircleImageViewItemFragment">
     <com.nju.View.CustomImageVIew
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="fitXY"
         android:clickable="true"
         android:id="@+id/fragment_circle_image_view_item_iamge"
         />
