--- a/app/src/main/res/layout/recommend_work_item_list_item.xml
+++ b/app/src/main/res/layout/recommend_work_item_list_item.xml
@@ -30,6 +30,15 @@
         android:id="@+id/content_tv"
         android:layout_below="@+id/re_list_item_title"
         android:layout_alignParentStart="true" />
+    <com.nju.View.SchoolFriendGridView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:numColumns="3"
+        android:horizontalSpacing="@dimen/FIVE_DP"
+        android:verticalSpacing="@dimen/FIVE_DP"
+        android:id="@+id/mGridView"
+        android:layout_below="@+id/content_tv"
+        android:layout_alignParentStart="true" />
     <!--<TextView-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
@@ -60,7 +69,7 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/comment_str"
         android:id="@+id/textView15"
-        android:layout_below="@+id/content_tv"
+        android:layout_below="@+id/mGridView"
         android:layout_toStartOf="@+id/comment_number_tv" />
 
     <TextView
