--- a/app/src/main/res/layout/listview_header.xml
+++ b/app/src/main/res/layout/listview_header.xml
@@ -13,7 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-
         android:id="@+id/textView38"
         android:layout_gravity="right" />
 
@@ -26,7 +25,7 @@
             android:layout_width="@dimen/phone_item_height"
             android:layout_height="@dimen/phone_item_height"
             android:layout_marginEnd="10dp"
-            android:id="@+id/imageView"
+            android:id="@+id/head_icon_img"
             android:src="@drawable/head2"
             android:background="@drawable/head_icon_bg"
             android:layout_gravity="right"
