--- a/app/src/main/res/layout/person_item.xml
+++ b/app/src/main/res/layout/person_item.xml
@@ -6,7 +6,6 @@
     android:paddingEnd="@dimen/phone_apadding"
     android:background="@android:color/white"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,7 +16,6 @@
         android:id="@+id/day_tv"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="@dimen/phone_apadding"
         android:layout_marginTop="@dimen/phone_apadding" />
 
     <TextView
@@ -32,38 +30,13 @@
         android:layout_alignBottom="@+id/day_tv"
         android:layout_toEndOf="@+id/day_tv" />
 
-    <com.nju.View.SchoolFriendTextView
-        android:layout_width="wrap_content"
+    <com.nju.View.NonScrollableListView
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:layout_marginTop="5dp"
-        android:id="@+id/title_tv"
-        android:textColor="@android:color/black"
-        android:layout_marginStart="15dp"
+        android:id="@+id/listView"
+        android:divider="@null"
         android:layout_alignTop="@+id/day_tv"
-        android:layout_toEndOf="@+id/month_tv" />
+        android:layout_toEndOf="@+id/month_tv"/>
 
-    <com.nju.View.SchoolFriendTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/phone_apadding"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:layout_marginEnd="@dimen/phone_apadding"
-        android:textColor="@android:color/black"
-        android:background="@color/light_gray"
-        android:id="@+id/content_tv"
-        android:lines="2"
-        android:ellipsize="end"
-        android:layout_below="@+id/title_tv"
-        android:layout_alignStart="@+id/title_tv" />
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/phone_apadding"
-        android:layout_alignStart="@+id/content_tv"
-        android:layout_below="@+id/content_tv"/>
 </RelativeLayout>
