--- a/app/src/main/res/values/icons.xml
+++ b/app/src/main/res/values/icons.xml
@@ -23,5 +23,5 @@
     <string name="recommend_icon">&#xf26a;</string>
     <string name="circle_icon">&#xf015;</string>
     <string name="maror_ask">&#xf18d;</string>
-
+    <string name="search_icon">&#xf002;</string>
 </resources>
