--- a/app/src/main/res/layout/fragment_circle_image_view_item.xml
+++ b/app/src/main/res/layout/fragment_circle_image_view_item.xml
@@ -1,12 +1,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:gesture-image="http://schemas.polites.com/android"
     tools:context="com.nju.fragment.CircleImageViewItemFragment">
-    <com.nju.View.CustomImageVIew
+    <com.nju.View.GestureImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:clickable="true"
+        android:layout_height="wrap_content"
+        gesture-image:min-scale="0.1"
+        gesture-image:max-scale="10.0"
+        gesture-image:strict="false"
         android:id="@+id/fragment_circle_image_view_item_iamge"
         />
 
