--- a/app/src/main/res/layout/fragment_major_ask.xml
+++ b/app/src/main/res/layout/fragment_major_ask.xml
@@ -1,17 +1,27 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@android:color/white"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <FrameLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.nju.fragment.MajorAskFragment">
-    <android.support.v4.widget.SwipeRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/swiperefresh"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ListView
-            android:id="@+id/listView"
-            android:headerDividersEnabled="false"
+    android:layout_alignParentTop="true"
+    android:layout_height="match_parent"
+    tools:context="com.nju.fragment.MajorAskFragment">
+        <android.support.v4.widget.SwipeRefreshLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/swiperefresh"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </android.support.v4.widget.SwipeRefreshLayout>
-</FrameLayout>
+            android:layout_height="match_parent">
+            <ListView
+                android:id="@+id/listView"
+                android:headerDividersEnabled="false"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </android.support.v4.widget.SwipeRefreshLayout>
+        <include layout="@layout/hand_touch_bn"/>
+    </FrameLayout>
+    <include layout="@layout/college_choose_dialog"/>
+    <include layout="@layout/search"/>
+</RelativeLayout>
