--- a/app/src/main/res/layout/main_viewpager.xml
+++ b/app/src/main/res/layout/main_viewpager.xml
@@ -58,13 +58,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
-                    android:textSize="32sp"
+                    android:textSize="25sp"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"
                     android:paddingLeft="@dimen/button_padding"
                     android:paddingRight="@dimen/button_padding"
                     android:visibility="gone"
-                    android:text="@string/ellipsis_icon"
+                    android:text="@string/search_icon"
                     android:id="@+id/main_viewpager_menu_more"
                     />
                 <LinearLayout
