--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -1,106 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:layout_marginTop="50dp"
+    android:layout_marginTop="@dimen/phone_item_height"
+    android:layout_height="@dimen/phone_item_height"
+    android:paddingStart="@dimen/phone_apadding"
+    android:paddingEnd="@dimen/phone_apadding"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:background="@drawable/gray_line_bg"
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:text="@string/search"
+        android:background="@drawable/circle_button_bg"
+        android:id="@+id/button"
+
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText3"
+        android:hint="@string/input_key_search"
         android:layout_alignParentBottom="true"
-        android:gravity="center"
-        android:id="@+id/re_work_item_detail_layout"
-        android:layout_height="60dp">
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="-1dp"
-            android:background="@drawable/item_toggle_bg">
-            <com.nju.View.SchoolFriendAweTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/trash_icon"
-                android:id="@+id/textView17"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/delete"
-                android:gravity="center"
-                android:id="@+id/textView18"
-                android:textColor="@android:color/black"
-                android:layout_below="@+id/textView17"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentStart="true"
-                  />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="-1dp"
-            android:background="@drawable/item_toggle_bg">
-            <com.nju.View.SchoolFriendAweTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/comment_icon"
-                android:id="@+id/textView20"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/replay"
-                android:gravity="center"
-                android:id="@+id/textView21"
-                android:textColor="@android:color/black"
-                android:layout_below="@+id/textView20"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentStart="true"
-                />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="-1dp"
-            android:background="@drawable/item_toggle_bg">
-            <com.nju.View.SchoolFriendAweTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/close_icon"
-                android:id="@+id/textView23"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/close"
-                android:gravity="center"
-                android:id="@+id/textView22"
-                android:textColor="@android:color/black"
-                android:layout_below="@+id/textView23"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentStart="true"
-                />
-        </RelativeLayout>
-    </LinearLayout>
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/button" />
 </RelativeLayout>
