--- a/app/src/main/res/layout/fragment_publish_voice.xml
+++ b/app/src/main/res/layout/fragment_publish_voice.xml
@@ -137,6 +137,7 @@
                         android:paddingRight="@dimen/padding_left"
                         />
                     <TextView
+                        android:id="@+id/edit_label_tv"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:gravity="end"
