--- a/app/src/main/res/layout/alumni_talk_item.xml
+++ b/app/src/main/res/layout/alumni_talk_item.xml
@@ -77,12 +77,24 @@
                 android:text="@string/write_comment_icon"
                 android:layout_alignBottom="@+id/date_tv"
                 android:layout_alignParentEnd="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:id="@+id/delete_tv"
+                android:text="ddd"
+                android:textColor="@color/light_blue"
+                android:layout_below="@+id/location_tv"
+                android:layout_toEndOf="@+id/date_tv"
+                android:layout_marginStart="@dimen/phone_apadding" />
         </RelativeLayout>
 
         <com.nju.View.NonScrollableListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#F5F5F5"
+
             android:divider="@null"
             android:dividerHeight="0dp"
             android:id="@+id/comment_listView"
