--- a/app/src/main/res/layout/alumni_question_item.xml
+++ b/app/src/main/res/layout/alumni_question_item.xml
@@ -33,6 +33,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/name_tv"
+        android:text="name"
         android:textColor="@color/light_blue"
         android:layout_alignBottom="@+id/re_list_item_name"
         android:layout_toEndOf="@+id/re_list_item_name" />
@@ -72,4 +73,15 @@
         android:id="@+id/question_gridview"
         android:layout_below="@+id/title_tv"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/light_blue"
+        android:id="@+id/delete_tv"
+        android:layout_alignBaseline="@+id/name_tv"
+        android:layout_alignBottom="@+id/name_tv"
+        android:layout_toEndOf="@+id/name_tv"
+        android:layout_marginStart="@dimen/phone_apadding" />
 </RelativeLayout>
