--- a/app/src/main/res/layout/alumni_voice_item.xml
+++ b/app/src/main/res/layout/alumni_voice_item.xml
@@ -9,8 +9,7 @@
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:id="@+id/alumni_vo_imageView"
-        android:src="@drawable/cheese_1"
+        android:id="@+id/head_icon_img"
         android:layout_marginEnd="@dimen/phone_apadding"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
@@ -23,7 +22,7 @@
         android:text="1"
         android:id="@+id/alumni_vo_name"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/alumni_vo_imageView" />
+        android:layout_toEndOf="@+id/head_icon_img" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -43,7 +42,7 @@
         android:id="@+id/alumni_vo_title"
         android:text="1"
         android:layout_below="@+id/alumni_vo_label"
-        android:layout_toEndOf="@+id/alumni_vo_imageView" />
+        android:layout_toEndOf="@+id/head_icon_img" />
 
 
     <TextView
@@ -81,7 +80,6 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="1"
         android:id="@+id/alumni_vo_praise_number"
-        android:layout_marginEnd="6dp"
         android:layout_alignBottom="@+id/view"
         android:layout_toStartOf="@+id/view" />
 
@@ -93,7 +91,7 @@
         android:maxLines="2"
         android:ellipsize="end"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:layout_toEndOf="@+id/alumni_vo_imageView"
+        android:layout_toEndOf="@+id/head_icon_img"
         android:layout_below="@+id/alumni_vo_title"
         android:id="@+id/alumni_vo_simple_desc" />
     <com.nju.View.SchoolFriendGridView
@@ -115,4 +113,14 @@
         android:id="@+id/textView23"
         android:layout_alignBottom="@+id/alumni_vo_praise_number"
         android:layout_toStartOf="@+id/alumni_vo_praise_number" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:layout_marginStart="@dimen/phone_apadding"
+        android:textColor="@color/light_blue"
+        android:id="@+id/delete_tv"
+        android:layout_alignTop="@+id/alumni_vo_date"
+        android:layout_toEndOf="@+id/alumni_vo_date" />
 </RelativeLayout>
