--- a/app/src/main/res/layout/recommend_work_item_list_item.xml
+++ b/app/src/main/res/layout/recommend_work_item_list_item.xml
@@ -18,7 +18,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         />
-    <TextView
+    <com.nju.View.SchoolFriendTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
@@ -39,29 +39,23 @@
         android:id="@+id/mGridView"
         android:layout_below="@+id/content_tv"
         android:layout_alignParentStart="true" />
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
-        <!--android:id="@+id/re_list_item_label"-->
-        <!--android:layout_alignBottom="@+id/re_list_item_name"-->
-        <!--android:layout_toEndOf="@+id/re_list_item_name" />-->
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/re_list_item_date"
-        android:layout_alignBottom="@+id/comment_number_tv"
+        android:text="111"
+        android:layout_below="@+id/mGridView"
         android:layout_alignParentStart="true" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/comment_number_tv"
-        android:layout_marginEnd="@dimen/phone_apadding"
         android:text="0"
-        android:layout_alignBottom="@+id/textView15"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignTop="@+id/textView15"
+        android:layout_alignEnd="@+id/mGridView" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -69,28 +63,37 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/comment_str"
         android:id="@+id/textView15"
-        android:layout_below="@+id/mGridView"
+        android:layout_alignTop="@+id/name_tv"
         android:layout_toStartOf="@+id/comment_number_tv" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/phone_apadding"
         android:paddingEnd="@dimen/phone_apadding"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/recommend"
         android:id="@+id/textView32"
-        android:layout_alignTop="@+id/re_list_item_date"
-        android:layout_toEndOf="@+id/re_list_item_date" />
+        android:layout_below="@+id/re_list_item_date"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/light_blue"
+        android:text="name"
         android:id="@+id/name_tv"
         android:layout_alignTop="@+id/textView32"
         android:layout_toEndOf="@+id/textView32" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/light_blue"
+        android:id="@+id/delete_tv"
+        android:layout_alignTop="@+id/name_tv"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
