--- a/app/src/main/res/layout/fragment_person_recommend_work_item_detail.xml
+++ b/app/src/main/res/layout/fragment_person_recommend_work_item_detail.xml
@@ -71,6 +71,13 @@
                         android:layout_alignParentTop="true"
                         android:layout_alignParentStart="true" />
                 </RelativeLayout>
+                <com.nju.View.NonScrollableListView
+                    android:id="@+id/listView"
+                    android:paddingStart="@dimen/phone_apadding"
+                    android:paddingEnd="@dimen/phone_apadding"
+                    android:layout_width="match_parent"
+                    android:divider="@null"
+                    android:layout_height="wrap_content"/>
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
