--- a/app/src/main/res/layout/person_item_tool_bar.xml
+++ b/app/src/main/res/layout/person_item_tool_bar.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:textColor="@color/colorPrimaryDark"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/trash_icon"
             android:id="@+id/textView17"
@@ -51,6 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:textColor="@color/colorPrimaryDark"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/comment_icon"
             android:id="@+id/textView20"
@@ -82,6 +84,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:textColor="@color/colorPrimaryDark"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/close_icon"
             android:id="@+id/textView23"
