--- a/app/src/main/res/layout/dynamic_collect_item.xml
+++ b/app/src/main/res/layout/dynamic_collect_item.xml
@@ -47,14 +47,16 @@
         android:layout_width="match_parent"
         android:layout_below="@+id/head_icon"
         android:layout_alignStart="@+id/head_icon"
-        android:layout_alignEnd="@+id/date_tv"
         android:paddingEnd="@dimen/phone_apadding"
         android:layout_marginBottom="@dimen/phone_apadding"
         android:layout_marginTop="@dimen/phone_apadding"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/mCheckBox"
+        android:layout_toStartOf="@+id/date_tv"
+        android:id="@+id/frameLayout4">
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Medium Text"
             android:textColor="@android:color/black"
@@ -69,4 +71,12 @@
              android:layout_height="wrap_content"
             android:maxHeight="150dp" />
     </FrameLayout>
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mCheckBox"
+        android:visibility="gone"
+        android:layout_alignTop="@+id/frameLayout4"
+        android:layout_alignEnd="@+id/date_tv" />
 </RelativeLayout>
