--- a/app/src/main/res/layout/fragment_person_alumni_voice_item_detail.xml
+++ b/app/src/main/res/layout/fragment_person_alumni_voice_item_detail.xml
@@ -62,12 +62,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingTop="@dimen/phone_apadding"
+                    android:paddingStart="@dimen/phone_apadding"
+                    android:paddingEnd="@dimen/phone_apadding"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:layout_marginBottom="@dimen/padding_left"
                     android:id="@+id/alumni_vo_date"
                     android:text="1"
-                    android:layout_below="@+id/alumni_vo_desc"
-                    android:layout_alignStart="@+id/alumni_vo_desc" />
+                    android:layout_below="@+id/listView"
+                    android:layout_alignStart="@+id/listView" />
                 <com.nju.View.SchoolFriendTextView
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
@@ -79,13 +81,21 @@
                     android:layout_toEndOf="@+id/alumni_vo_imageView"
                     android:layout_below="@+id/alumni_vo_title"
                     android:id="@+id/alumni_vo_desc" />
+                <com.nju.View.NonScrollableListView
+                    android:id="@+id/listView"
+                    android:paddingStart="@dimen/phone_apadding"
+                    android:paddingEnd="@dimen/phone_apadding"
+                    android:layout_width="match_parent"
+                    android:divider="@null"
+                    android:layout_below="@+id/alumni_vo_desc"
+                    android:layout_height="wrap_content"/>
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_marginBottom="@dimen/phone_apadding"
                     android:id="@+id/linearLayout2"
-                    android:layout_below="@+id/alumni_vo_desc"
+                    android:layout_below="@+id/listView"
                     android:layout_alignStart="@+id/alumni_vo_date" />
 
                 <View
@@ -112,9 +122,10 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="0"
+                    android:layout_marginEnd="@dimen/phone_apadding"
                     android:id="@+id/comment_number_tv"
                     android:layout_alignTop="@+id/textView37"
-                    android:layout_alignEnd="@+id/alumni_vo_desc" />
+                    android:layout_alignEnd="@+id/listView" />
 
                 <TextView
                     android:layout_width="wrap_content"
