--- a/app/src/main/res/layout/fragment_person_ask_detail.xml
+++ b/app/src/main/res/layout/fragment_person_ask_detail.xml
@@ -43,6 +43,13 @@
                         android:layout_marginTop="@dimen/padding_left"
                         android:id="@+id/description_tv"
                         />
+                    <com.nju.View.NonScrollableListView
+                        android:id="@+id/listView"
+                        android:paddingStart="@dimen/phone_apadding"
+                        android:paddingEnd="@dimen/phone_apadding"
+                        android:layout_width="match_parent"
+                        android:divider="@null"
+                        android:layout_height="wrap_content"/>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:orientation="horizontal"
