--- a/app/src/main/res/layout/refresh_listview.xml
+++ b/app/src/main/res/layout/refresh_listview.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/light_gray"
     android:layout_marginTop="@dimen/phone_apadding"
 
@@ -7,6 +7,8 @@
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swiperefresh"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/collectToolLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ListView
@@ -18,4 +20,36 @@
             android:layout_marginBottom="50dp"
             android:layout_height="match_parent"/>
     </android.support.v4.widget.SwipeRefreshLayout>
-</FrameLayout>
+    <RelativeLayout
+        android:id="@+id/collectToolLayout"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:background="@drawable/gray_line_bg"
+        android:layout_alignParentBottom="true"
+        android:layout_height="@dimen/phone_item_height">
+
+        <com.nju.View.SchoolFriendAweTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/padding_left"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/share_icon"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            android:id="@+id/textView46"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true" />
+
+        <com.nju.View.SchoolFriendAweTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/trash_icon"
+            android:layout_marginEnd="@dimen/padding_left"
+            android:id="@+id/textView47"
+            android:layout_alignTop="@+id/textView46"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
+</RelativeLayout>
