--- a/app/src/main/res/layout/fragment_major_ask_detail.xml
+++ b/app/src/main/res/layout/fragment_major_ask_detail.xml
@@ -76,6 +76,15 @@
                             android:paddingEnd="@dimen/phone_apadding"
                             android:id="@+id/name_tv"
                             />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/phone_apadding"
+                            android:textColor="@color/light_blue"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:id="@+id/delete_tv" />
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
