--- a/app/src/main/res/layout/fragment_recommend_work_item_detail.xml
+++ b/app/src/main/res/layout/fragment_recommend_work_item_detail.xml
@@ -138,6 +138,16 @@
                         android:id="@+id/label_tv"
                         android:layout_alignParentBottom="true"
                         android:layout_toEndOf="@+id/name_tv" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:layout_marginStart="@dimen/phone_apadding"
+                        android:textColor="@color/light_blue"
+                        android:id="@+id/delete_tv"
+                        android:layout_alignParentTop="true"
+                        android:layout_toEndOf="@+id/label_tv" />
                 </RelativeLayout>
                 <View
                     android:layout_width="match_parent"
