--- a/app/src/main/assets/SchoolFriendHtml/css/alumniGroup.css
+++ b/app/src/main/assets/SchoolFriendHtml/css/alumniGroup.css
@@ -11,7 +11,7 @@ p,h1,h2,h3,h4,h5,h6,div,body,hr{
  	height: auto;
  }
  .light_blue{
- 	color: blue
+ 	color: #283593
  }
  .padding{
  	padding-top: 10px;
