--- a/app/src/main/res/layout/fragment_major_ask_detail.xml
+++ b/app/src/main/res/layout/fragment_major_ask_detail.xml
@@ -107,4 +107,5 @@
         </RelativeLayout>
     </FrameLayout>
     <include layout="@layout/comment_input"/>
+    <include layout="@layout/share_layout"/>
 </RelativeLayout>
