--- a/app/src/main/res/values/icons.xml
+++ b/app/src/main/res/values/icons.xml
@@ -24,4 +24,5 @@
     <string name="circle_icon">&#xf015;</string>
     <string name="maror_ask">&#xf18d;</string>
     <string name="search_icon">&#xf002;</string>
+    <string name="weixin_icon">&#xf1d7;</string>
 </resources>
